<resources>
    <string name="app_name">Widgets for WhatsApp™</string>

    <string name="action_reset">Reset</string>
    <string name="action_settings">Settings</string>

    <string name="dot">•</string>

    <string name="button_splash">START</string>
    <string name="button_contact">PICK CONTACT</string>
    <string name="button_previous">BACK</string>
    <string name="button_next">NEXT</string>
    <string name="button_create">CREATE</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>

    <string name="menu_reset_title">Reset Configuration</string>
    <string name="menu_reset_confirmation">You are about to clear all configuration in this setup and return to the start page. Are you sure?</string>
    <string name="menu_reset">RESET</string>

    <string name="splash_heading">Widget Configuration</string>
    <string name="splash_title">Before we begin...</string>
    <string name="splash_description_whatsapp_portrait">WhatsApp™ is a trademark belonging to WhatsApp Inc. This application is not in any way affiliated with WhatsApp Inc.</string>
    <string name="splash_description_permissions_portrait">Please ensure that you have the WhatsApp™ application installed. When prompted, please allow setup to read from your contacts.</string>
    <string name="splash_no_whatsapp">WhatsApp application is not installed</string>
    <string name="splash_download">GET APP</string>
    <string name="splash_no_permission">No permission to read contacts</string>
    <string name="splash_settings">SETTINGS</string>
    <string name="splash_permission_title">Permission Required</string>
    <string name="splash_permission_explanation">In order to link widgets to your contacts on WhatsApp™, we will first need permission to read contacts from your contact list.</string>

    <string name="contact_title">1. Choose Contact</string>
    <string name="contact_subtitle">Who would you like the widget to be linked with?</string>
    <string name="contact_description_feature_1">You will be contacting this person directly when you press the widget.</string>
    <string name="contact_description_feature_2">Contact details of this person might be displayed on your home screen.</string>
    <string name="contact_no_whatsapp">This is not a WhatsApp™ contact</string>
    <string name="contact_incomplete">No contact selected</string>
    <string name="contact_retry">RETRY</string>

    <string name="options_title">2. Widget Options</string>
    <string name="options_subtitle">How would you like your widget to look?</string>
    <string name="options_label_hint">e.g. Jane Smith</string>
    <string name="options_label_label">Name / Label</string>
    <string name="options_description_hint">e.g. Project Manager</string>
    <string name="options_description_label">Description</string>
    <string name="options_number_label">Show Phone Number</string>
    <string name="options_number_description">Phone number will be displayed</string>
    <string name="options_avatar_label">Display Avatar</string>
    <string name="options_avatar_description">Contact profile photo will be visible</string>
    <string name="options_large_label">Use Large Text</string>
    <string name="options_large_description">Larger font size for accessibility</string>

    <string name="styling_title">3. Select Widget Style</string>
    <string name="styling_subtitle">Choose a widget color for this contact:</string>
    <string name="styling_grid_item_label">Grid View Item</string>

    <string name="create_no_contact">No contact selected</string>
    <string name="create_no_label">No label provided</string>
    <string name="create_fix">FIX</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <string name="medium_widget_overline">CONTACT ON WhatsApp™</string>
    <string name="medium_widget_initials_default">JDS</string>
    <string name="medium_widget_label_default">John Doe Smith</string>
    <string name="medium_widget_description_default">John Doe Smith of the House Targaryen, First of His Name, the Unburnt, King of the Andals and the First Men, Khaleesi of the Great Grass Sea, Breaker of Chains, and Father of Dragons</string>
    <string name="medium_widget_number">(PHONE NUMBER)</string>
    <string name="medium_widget_voice">VOICE</string>
    <string name="medium_widget_video">VIDEO</string>
    <string name="medium_widget_chat">CHAT</string>
</resources>
