<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_contact_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ConfigurationActivity$PlaceholderFragment">

    <!-- TODO: Check and ID all views -->

    <TextView
        android:id="@+id/section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/contact_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/section_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_margin_double"
        android:layout_marginRight="@dimen/activity_margin_double"
        android:text="@string/contact_subtitle"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_size_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_title" />

    <TextView
        android:id="@+id/section_dot_whatsapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_margin_medium"
        android:text="@string/dot"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toStartOf="@+id/section_description_whatsapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_subtitle" />

    <TextView
        android:id="@+id/section_description_whatsapp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_margin_half"
        android:layout_marginRight="@dimen/activity_margin_double"
        android:text="@string/contact_description_feature_1"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/section_dot_whatsapp"
        app:layout_constraintTop_toBottomOf="@+id/section_subtitle" />

    <TextView
        android:id="@+id/section_dot_permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_margin_medium"
        android:text="@string/dot"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toStartOf="@id/section_description_permissions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_description_whatsapp" />

    <TextView
        android:id="@+id/section_description_permissions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_margin_half"
        android:layout_marginRight="@dimen/activity_margin_double"
        android:text="@string/contact_description_feature_2"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/section_dot_permissions"
        app:layout_constraintTop_toBottomOf="@+id/section_description_whatsapp" />

    <android.support.design.button.MaterialButton
        android:id="@+id/section_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="?attr/colorAccent"
        android:minWidth="@dimen/button_min_width"
        android:paddingLeft="@dimen/button_padding_horizontal"
        android:paddingRight="@dimen/button_padding_horizontal"
        android:text="@string/button_contact"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_description_permissions" />

</android.support.constraint.ConstraintLayout>